feat: add open option page on popup

--- a/packages/excali-local/public/_locales/en/messages.json
+++ b/packages/excali-local/public/_locales/en/messages.json
@@ -67,5 +67,8 @@
   },
   "OptionPageTitle": {
     "message": "Excali Local Customization"
+  },
+  "OpenOptions": {
+    "message": "Open Options"
   }
 }
