feat: tip user when deny local font permissions

--- a/packages/excali-local/public/_locales/en/messages.json
+++ b/packages/excali-local/public/_locales/en/messages.json
@@ -70,5 +70,11 @@
   },
   "OpenOptions": {
     "message": "Open Options"
+  },
+  "LocalFontPermissionDenied": {
+    "message": "Local font permission denied"
+  },
+  "LocalFontPermissionDeniedContent": {
+    "message": "Please enable the permission to use local fonts"
   }
 }
