feat: add quick editor entry and shortcut
add quick editor button, command, and i18n support in popup and background scripts

add suggested keybinding and locale strings for quick editor

--- a/packages/excali-local/public/_locales/en/messages.json
+++ b/packages/excali-local/public/_locales/en/messages.json
@@ -8,6 +8,9 @@
   "Crop": {
     "message": "Crop"
   },
+  "OpenQuickEditor": {
+    "message": "Quick Edit"
+  },
   "OpenEditor": {
     "message": "Open Editor"
   },
