--- a/packages/excali-local/public/_locales/zh_CN/messages.json
+++ b/packages/excali-local/public/_locales/zh_CN/messages.json
@@ -8,6 +8,9 @@
   "Crop": {
     "message": "裁剪"
   },
+  "OpenQuickEditor": {
+    "message": "快速编辑"
+  },
   "OpenEditor": {
     "message": "打开编辑器"
   },
