feat: add binary font file support
- Add IndexedDB storage for custom font binaries (db.ts)
- Add FontSource type (system/custom union) and FontConfig interfaces
- Implement FontFace API integration for custom fonts (font-injector.ts)
- Add FontSlot and CustomFontUpload components for options page
- Write unit tests for font-injector module
- Update tasks.md to mark all items complete

close #2

--- a/packages/excali-local/public/_locales/en/messages.json
+++ b/packages/excali-local/public/_locales/en/messages.json
@@ -33,16 +33,25 @@
     "message": "Something went wrong. Please try again later."
   },
   "Font": {
-    "message": "Font"
+    "message": "Font Family"
+  },
+  "FontDescription": {
+    "message": "Excali Local allows customizing the font of the texts in Excalidraw canvas"
+  },
+  "UploadFont": {
+    "message": "Upload Font"
+  },
+  "Uploading": {
+    "message": "Uploading Font"
   },
   "Handwriting": {
-    "message": "Handwriting Font Family"
+    "message": "Handwriting"
   },
   "Normal": {
-    "message": "Normal Font Family"
+    "message": "Normal"
   },
   "Code": {
-    "message": "Code Font Family"
+    "message": "Code"
   },
   "FontPlaceholder": {
     "message": "Please input valid font name"
