feat(font): improve custom font upload handling
Add font family naming based on file name and ensure font is added to document. Add success/failure messages for font upload in English and Chinese locales.

--- a/packages/excali-local/public/_locales/en/messages.json
+++ b/packages/excali-local/public/_locales/en/messages.json
@@ -38,6 +38,12 @@
   "FontDescription": {
     "message": "Excali Local allows customizing the font of the texts in Excalidraw canvas"
   },
+  "FontUploadedSuccess": {
+    "message": "Font Uploaded Success"
+  },
+  "FontUploadFailed": {
+    "message": "Font Uploaded Failed"
+  },
   "UploadFont": {
     "message": "Upload Font"
   },
