feat(i18n): add i18n support for 'Open with Excali Local' button
Use translation function for button label and add corresponding messages in English and Chinese locales.

--- a/packages/excali-local/public/_locales/en/messages.json
+++ b/packages/excali-local/public/_locales/en/messages.json
@@ -94,5 +94,8 @@
   },
   "LocalFontPermissionDeniedContent": {
     "message": "Please enable the permission to use local fonts"
+  },
+  "OpenWithExcaliLocal": {
+    "message": "Open with Excali Local"
   }
 }
